# feedback-manager

./: Cargo.toml  README.md
src/: error.rs  feedback.rs  io.rs  lib.rs  main.rs
tests/: test_main.rs
