[package]
name = "feedback-manager"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
clap-verbosity-flag = "*"
confy = "*"
env_logger = "*"
human-panic = "*"
log = "*"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"
# dir-diff = "*"
# duct = "*"
predicates = "*"
pretty_assertions = "*"
rand = "0.8.5"
# rexpect = "*"
spectral = "*"
# tempfile = "*"
